--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ node_js:
     - '0.11'
 before_script:
     - npm config set coverage true
+script: npm test
 after_success:
     - npm run-script coveralls
