--- a/package.json
+++ b/package.json
@@ -19,25 +19,30 @@
   ],
   "scripts": {
     "prepublish": "gulp coffee --require coffee-script/register",
-    "test": "coffeelint gulpfile.coffee index.coffee test -f ./coffeelint.json && istanbul test _mocha --report lcovonly -- ./test/*.coffee --require coffee-script/register --reporter spec",
+    "test": "coffeelint gulpfile.coffee index.coffee test -f ./coffeelint.json && istanbul test _mocha --report lcov --report html -- ./test/*.coffee --require coffee-script/register --reporter spec",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "dependencies": {
     "gulp-util": "^3.0.0",
     "through2": "^0.6.1",
-    "markdown-it": "^4.0.1"
+    "markdown-it": "^4.0.1",
+    "underscore": "^1.8.2"
   },
   "devDependencies": {
     "coffee-script": "^1.7.1",
     "coffeelint": "^1.4.0",
     "coveralls": "^2.8.0",
     "del": "^1.1.1",
+    "istanbul": "^0.3.8",
+    "mocha": "^2.2.1",
     "gulp": "^3.5.2",
     "gulp-coffee": "^2.1.2",
     "gulp-util": "^3.0.4",
-    "istanbul": "^0.3.8",
-    "mocha": "^2.2.1",
-    "should": "^5.2.0"
+    "should": "^5.2.0",
+    "gulp-bump": "^0.3.0",
+    "gulp-git": "^1.1.0",
+    "gulp-tag-version": "^1.2.1",
+    "markdown-it-checkbox": "^1.1.0"
   },
   "engines": {
     "node": ">=0.10.0",
