--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "gulp-util": "^3.0.0",
     "through2": "^0.6.1",
-    "markdown-it": "^4.0.1",
     "underscore": "^1.8.2"
+  },
+  "peerDependencies": {
+    "markdown-it": "^4.x"
   },
   "devDependencies": {
     "coffee-script": "^1.7.1",
