--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
   "dependencies": {
     "gulp-util": "^3.0.0",
     "through2": "^0.6.1",
-    "underscore": "^1.8.2"
-  },
-  "peerDependencies": {
+    "underscore": "^1.8.2",
     "markdown-it": "^4.x"
   },
   "devDependencies": {
